Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Core ReactOS
CORE-10980
PATCH: When Internet connection is down. Rapps does not generate any msg.
Log In
Export
XML
Word
Printable
Details
Type:
Bug
Status:
Resolved
Priority:
Major
Resolution:
Fixed
Fix Version/s:
0.4.3
Component/s:
None
Labels:
PATCH
Module:
rapps_new
Sprint:
September 2016
Description
A patch to generate msg when internet connection is down.
Attachments
Options
Sort By Name
Sort By Date
Ascending
Descending
Thumbnails
List
Download All
Attachments
rapps_new.patch
16 kB
2016-03-18 11:38
rapps_new2.patch
19 kB
2016-03-19 14:08
Screenshot 2016-03-18 11.05.05.png
71 kB
2016-03-18 05:38
Activity
People
Assignee:
Daniel Reimer
Reporter:
Rama Teja Gampa
Votes:
0
Vote for this issue
Watchers:
3
Start watching this issue
Dates
Created:
2016-03-16 10:43
Updated:
2016-09-29 21:41
Resolved:
2016-09-29 21:37