[RAPPS_NEW] When Internet connection is down. Rapps does not generate any msg by Rama Teja Gampa + GIT -> SVN Patch manual translation + Bitrot fixes + Tabs -> Spaces fixes CORE-10980 #resolve #comment Committed, thx ^^

svn path=/trunk/; revision=72864